[GEOT-7336] Update to ErrorProne 2.18