@@ -16,11 +16,11 @@
  */
 package org.geotools.filter.visitor;
 
+import static java.util.Map.entry;
+
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import org.geotools.filter.function.FilterFunction_if_then_else;
@@ -48,11 +48,10 @@ import org.opengis.filter.expression.Subtract;
 public class ExpressionTypeVisitor implements ExpressionVisitor {
 
     static final Map<Class<?>, List<Class<?>>> PROMOTIONS =
-            new HashMap<Class<?>, List<Class<?>>>() {
-                {
-                    put(
+            Map.ofEntries(
+                    entry(
                             Byte.class,
-                            Arrays.asList(
+                            List.of(
                                     Byte.class,
                                     Short.class,
                                     Integer.class,
@@ -60,35 +59,32 @@ public class ExpressionTypeVisitor implements ExpressionVisitor {
                                     Float.class,
                                     Double.class,
                                     BigInteger.class,
-                                    BigDecimal.class));
-                    put(
+                                    BigDecimal.class)),
+                    entry(
                             Short.class,
-                            Arrays.asList(
+                            List.of(
                                     Short.class,
                                     Integer.class,
                                     Long.class,
                                     Float.class,
                                     Double.class,
                                     BigInteger.class,
-                                    BigDecimal.class));
-                    put(
+                                    BigDecimal.class)),
+                    entry(
                             Integer.class,
-                            Arrays.asList(
+                            List.of(
                                     Integer.class,
                                     Long.class,
                                     Float.class,
                                     Double.class,
                                     BigInteger.class,
-                                    BigDecimal.class));
-                    put(
+                                    BigDecimal.class)),
+                    entry(
                             Long.class,
-                            Arrays.asList(
-                                    Long.class, Double.class, BigInteger.class, BigDecimal.class));
-                    put(Float.class, Arrays.asList(Float.class, Double.class, BigDecimal.class));
-                    put(Double.class, Arrays.asList(Double.class, BigDecimal.class));
-                    put(BigInteger.class, Arrays.asList(BigInteger.class, BigDecimal.class));
-                }
-            };
+                            List.of(Long.class, Double.class, BigInteger.class, BigDecimal.class)),
+                    entry(Float.class, List.of(Float.class, Double.class, BigDecimal.class)),
+                    entry(Double.class, List.of(Double.class, BigDecimal.class)),
+                    entry(BigInteger.class, List.of(BigInteger.class, BigDecimal.class)));
 
     FeatureType featureType;
 
